--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -16,53 +16,65 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="vjI-d4-XuR" customClass="TableViewCell" customModule="Test" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="194"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="184"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vjI-d4-XuR" id="zR4-cL-55V">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="194"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Om4-kA-fGN">
-                                            <rect key="frame" x="0.0" y="0.5" width="30" height="29"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="4hN-T8-btM"/>
-                                                <constraint firstAttribute="width" constant="30" id="RKK-7V-nNy"/>
-                                            </constraints>
-                                            <state key="normal" backgroundImage="pencil.circle.fill" catalog="system"/>
-                                        </button>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" verticalHuggingPriority="251" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aAM-oI-Jc2" userLabel="Top View">
-                                            <rect key="frame" x="40" y="0.0" width="374" height="184"/>
-                                            <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        </textView>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ae4-Wa-ZK8" userLabel="Bot View">
-                                            <rect key="frame" x="0.0" y="189" width="414" height="0.0"/>
-                                            <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                        </textView>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qMf-mM-hae">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="pje-Jj-U3F">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="184"/>
+                                                    <subviews>
+                                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Om4-kA-fGN">
+                                                            <rect key="frame" x="0.0" y="0.5" width="30" height="29"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" constant="30" id="4hN-T8-btM"/>
+                                                                <constraint firstAttribute="width" constant="30" id="RKK-7V-nNy"/>
+                                                            </constraints>
+                                                            <state key="normal" backgroundImage="pencil.circle.fill" catalog="system"/>
+                                                        </button>
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="aAM-oI-Jc2" userLabel="Top View">
+                                                            <rect key="frame" x="30" y="0.0" width="384" height="183.5"/>
+                                                            <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        </textView>
+                                                    </subviews>
+                                                </stackView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dYh-GT-46d">
+                                                    <rect key="frame" x="0.0" y="184" width="414" height="0.0"/>
+                                                    <subviews>
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ae4-Wa-ZK8" userLabel="Bot View">
+                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                                            <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="height" id="1DY-SL-cEY"/>
+                                                            </constraints>
+                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                                            <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        </textView>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                        </stackView>
                                     </subviews>
                                     <color key="backgroundColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <constraints>
-                                        <constraint firstItem="aAM-oI-Jc2" firstAttribute="top" secondItem="zR4-cL-55V" secondAttribute="top" id="0Oe-tc-AZG"/>
-                                        <constraint firstItem="ae4-Wa-ZK8" firstAttribute="leading" secondItem="zR4-cL-55V" secondAttribute="leading" id="104-w0-H03"/>
-                                        <constraint firstItem="aAM-oI-Jc2" firstAttribute="leading" secondItem="Om4-kA-fGN" secondAttribute="trailing" constant="10" id="877-G2-cf9"/>
-                                        <constraint firstAttribute="trailing" secondItem="aAM-oI-Jc2" secondAttribute="trailing" id="Fs9-6E-kh8"/>
-                                        <constraint firstAttribute="bottom" secondItem="ae4-Wa-ZK8" secondAttribute="bottom" constant="5" id="MeI-XX-BjF"/>
-                                        <constraint firstAttribute="trailing" secondItem="ae4-Wa-ZK8" secondAttribute="trailing" id="TxF-Wh-Pzd"/>
-                                        <constraint firstItem="Om4-kA-fGN" firstAttribute="top" secondItem="zR4-cL-55V" secondAttribute="top" id="Zy9-1o-MLp"/>
-                                        <constraint firstItem="Om4-kA-fGN" firstAttribute="leading" secondItem="zR4-cL-55V" secondAttribute="leading" id="moq-OO-g46"/>
-                                        <constraint firstItem="ae4-Wa-ZK8" firstAttribute="top" secondItem="aAM-oI-Jc2" secondAttribute="bottom" constant="5" id="vcH-V7-UTz"/>
-                                        <constraint firstItem="aAM-oI-Jc2" firstAttribute="bottom" secondItem="ae4-Wa-ZK8" secondAttribute="bottom" priority="999" id="wTK-HW-wRe"/>
+                                        <constraint firstItem="qMf-mM-hae" firstAttribute="leading" secondItem="zR4-cL-55V" secondAttribute="leading" id="01R-Vb-dfo"/>
+                                        <constraint firstAttribute="trailing" secondItem="qMf-mM-hae" secondAttribute="trailing" id="EGK-6z-6u1"/>
+                                        <constraint firstItem="qMf-mM-hae" firstAttribute="top" secondItem="zR4-cL-55V" secondAttribute="top" id="NSn-7B-ajU"/>
+                                        <constraint firstAttribute="bottom" secondItem="qMf-mM-hae" secondAttribute="bottom" id="Y7R-J9-9Kx"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="hiddenCon" destination="wTK-HW-wRe" id="tnc-GH-0dM"/>
+                                    <outlet property="hiddenCon" destination="1DY-SL-cEY" id="6fs-3D-MQX"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
