--- a/Test/Base.lproj/Main.storyboard
+++ b/Test/Base.lproj/Main.storyboard
@@ -16,14 +16,14 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="vjI-d4-XuR" customClass="TableViewCell" customModule="Test" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="33.5"/>
+                                <rect key="frame" x="0.0" y="28" width="414" height="133.5"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="vjI-d4-XuR" id="zR4-cL-55V">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="33.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="133.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="qMf-mM-hae">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="33.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="133.5"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="pje-Jj-U3F">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="33.5"/>
@@ -46,13 +46,13 @@
                                                     </subviews>
                                                 </stackView>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="dYh-GT-46d">
-                                                    <rect key="frame" x="0.0" y="33.5" width="414" height="0.0"/>
+                                                    <rect key="frame" x="0.0" y="33.5" width="414" height="100"/>
                                                     <subviews>
                                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" userInteractionEnabled="NO" contentMode="scaleToFill" scrollEnabled="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ae4-Wa-ZK8" userLabel="Bot View">
-                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="0.0"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="414" height="100"/>
                                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                             <constraints>
-                                                                <constraint firstAttribute="height" id="1DY-SL-cEY"/>
+                                                                <constraint firstAttribute="height" constant="100" id="1DY-SL-cEY"/>
                                                             </constraints>
                                                             <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                             <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -74,6 +74,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="hiddenCon" destination="1DY-SL-cEY" id="6fs-3D-MQX"/>
+                                    <outlet property="theTextView" destination="ae4-Wa-ZK8" id="jkG-wo-bLF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
